--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "browserify": "^16.5.0",
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "mime": "^2.4.4",
     "mongodb": "^3.5.5",
+    "nodemon": "^2.0.2",
     "nunjucks": "^3.2.1"
   },
   "directories": {
