--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.4.1",
     "mime": "^2.4.4",
     "mongodb": "^3.5.5",
+    "mongoose": "^5.9.6",
     "nodemon": "^2.0.2",
     "nunjucks": "^3.2.1"
   },
