--- a/package.json
+++ b/package.json
@@ -13,12 +13,22 @@
   "license": "MIT",
   "dependencies": {
     "browserify": "^16.5.0",
+    "busboy": "^0.3.1",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^3.2.0",
+    "koa-mysql-session": "0.0.2",
+    "koa-router": "^7.4.0",
+    "koa-session-minimal": "^3.0.4",
+    "koa-static": "^5.0.0",
+    "koa-views": "^6.2.1",
     "mime": "^2.4.4",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.6",
+    "mysql": "^2.18.1",
+    "node-inspect": "^1.11.6",
     "nodemon": "^2.0.2",
     "nunjucks": "^3.2.1"
   },
