--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.4.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^3.2.0",
+    "koa-logger": "^3.2.1",
     "koa-mysql-session": "0.0.2",
     "koa-router": "^7.4.0",
     "koa-session-minimal": "^3.0.4",
